--- a/css/main.css
+++ b/css/main.css
@@ -194,13 +194,16 @@ input[class^="btn-"]:hover {
   padding: 1rem;
 }
 
+#main-nav li a {
+  font-size: 1.25rem;
+}
+
 #main-nav a {
   text-decoration: none;
-  font-size: 1.25rem;
+
   color: var(--white);
   text-transform: uppercase;
   border-bottom: 2px transparent solid;
-
   transition: border-color 0.5s;
 }
 
